Add body image and functionality buttons.

--- a/AutomatedTellerMachine/Views/Shared/_Layout.cshtml
+++ b/AutomatedTellerMachine/Views/Shared/_Layout.cshtml
@@ -30,10 +30,15 @@
         </div>
     </div>
     <div class="container body-content">
+        <div class="row">
+            <div class="col-md-12">
+                    <img src="~/Content/Images/adana.png" class="img-responsive center-block" />
+            </div>
+        </div>
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - CPCB</p>
+            <p>&copy; @DateTime.Now.Year - CPCB - @Html.Action("Serial","Home",new { letterCase = "lower" })</p>
         </footer>
     </div>
 
