--- a/AutomatedTellerMachine/Content/Site.css
+++ b/AutomatedTellerMachine/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.margin-top-20{
+    margin-top: 20px;
+}
+
+.col-md-12 adana img{
+    width: 1100px;
+    height: auto;
+}
