--- a/AutomatedTellerMachine/Views/Home/Index.cshtml
+++ b/AutomatedTellerMachine/Views/Home/Index.cshtml
@@ -2,57 +2,81 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Cilician Plain Community Bank</h1>
-    <p class="lead">Cilician Plain Community Bank offers the first ever web based ATM </p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Powered by ASP.NET</a></p>
-</div>
+@*Cilician Plain Community Bank*@
+
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Register</h2>
-        <p>
-            Open an account with us
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Register</a></p>
+
+    <div class="col-md-6 margin-top-20">
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-download">
+                Withdrawal
+            </span>
+        </a>
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-flash">
+                Quick Cash $100
+            </span>
+        </a>
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-question-sign">
+                Balance Inquiry
+            </span>
+        </a>
     </div>
-    <div class="col-md-4">
-        <h2>Log in</h2>
-        <p>Access your existing account.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Login</a></p>
+    <div class="col-md-6 margin-top-20">
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-print">
+                Print Statement
+            </span>
+        </a>
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-transfer">
+                Transfer Funds
+            </span>
+        </a>
+        <a href="#" class=" btn btn-primary btn-large btn-block">
+            <span class="glyphicon glyphicon-upload">
+                Deposit
+            </span>
+        </a>
     </div>
-   
+
+
+
 </div>
+
+
 @section scripts{
     <script>
         var testing = true;
     </script>
-    }
+}
 
 
 
 @*@{ var amounts = new List<Decimal> { 100, 25.50m, -40, 275.99m };}
 
-<ul>
-    @foreach(decimal amount in amounts)
+    <ul>
+        @foreach(decimal amount in amounts)
+        {
+            <li>
+                @formatAmount(amount)
+            </li>
+        }
+
+    </ul>
+
+
+    @helper formatAmount(decimal amount)
     {
-        <li>
-            @formatAmount(amount)
-        </li>
-    }
 
-</ul>
+        var color = "green";
+        if (amount < 0)
+        {
+            color = "red";
+        }
 
+        <span style="color:@color">@string.Format("{0:c}", amount)</span>
 
-@helper formatAmount(decimal amount)
-{
-
-    var color = "green";
-    if (amount < 0)
-    {
-        color = "red";
-    }
-
-    <span style="color:@color">@string.Format("{0:c}", amount)</span>
-
-}*@
+    }*@
