Add CheckingAccount model and Create a new user and detail page. Add validatiın to create inputs.

--- a/AutomatedTellerMachine/Views/Home/Index.cshtml
+++ b/AutomatedTellerMachine/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 Quick Cash $100
             </span>
         </a>
-        <a href="#" class=" btn btn-primary btn-large btn-block">
+        <a href="@Url.Action("Details","CheckingAccount")" class=" btn btn-primary btn-large btn-block">
             <span class="glyphicon glyphicon-question-sign">
                 Balance Inquiry
             </span>
