Add transaction page and connection wirh db

--- a/AutomatedTellerMachine/Views/Home/Index.cshtml
+++ b/AutomatedTellerMachine/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                 Transfer Funds
             </span>
         </a>
-        <a href="#" class=" btn btn-primary btn-large btn-block">
+        <a href="@Url.Action("Deposit","Transaction")" class=" btn btn-primary btn-large btn-block">
             <span class="glyphicon glyphicon-upload">
                 Deposit
             </span>
